--- a/dnd.css.css
+++ b/dnd.css.css
@@ -28,7 +28,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: url(img/midMoon.png);
+    background-image: url(img/midmoon.png);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
